--- a/assets/css/_base.css
+++ b/assets/css/_base.css
@@ -6,9 +6,13 @@
 
 body {
   font-family: var(--font-primary);
-  background-color: var(--light-purple);
+  background-color: var(--purple-bg);
   color: #000;
-  transition: ease-in-out 350ms;
+  transition: ease-in-out 300ms;
+}
+
+main {
+  background-color: var(--light-purple);
 }
 
 a {
